restoring splash screen logo and colors

--- a/apps/wallet-mobile/android/app/src/nightly/res/values/colors.xml
+++ b/apps/wallet-mobile/android/app/src/nightly/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="bootsplash_background">#595959</color>
+    <color name="bootsplash_background">#1036A0</color>
 </resources>
