--- a/apps/wallet-mobile/android/app/src/dev/res/values/colors.xml
+++ b/apps/wallet-mobile/android/app/src/dev/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="bootsplash_background">#1036A0</color>
+    <color name="bootsplash_background">#3154CB</color>
 </resources>
